Updated for December 2014 meetup

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -18,7 +18,7 @@
 
 .logo .meteor
   display:block;
-  background: url(../images/meteor-london-logo-on-dark.svg) no-repeat center center;
+  background: url(../images/meteor-logo.svg) no-repeat center center;
   height: 100%;
   background-size: 100% auto;
   color:transparent;
@@ -27,9 +27,27 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  
+.logo.square
+  height:500px;
+
+.logo .meteor.london
+  background-image: url(../images/meteor-london-logo-on-dark.svg);
 
 .meteorday
   background: url(http://meteorday.com/img/intro-bg.jpg) no-repeat scroll 0 0
+  background-size: cover
+  
+.nordic-meteor
+  background: url(../images/bg-nordic-meteor.jpg) no-repeat scroll 0 0
+  background-size: cover
+
+.meteor-shower
+  background: url(../images/bg-meteor-shower.jpg) no-repeat scroll 0 0
+  background-size: cover
+  
+.starfield
+  background: url(../images/bg-starfield.jpg) no-repeat scroll 0 0
   background-size: cover
 
 .meteor-london-then-1
