--- a/src/index.jade
+++ b/src/index.jade
@@ -13,106 +13,58 @@ html
 
       section
         header.logo
-          div.meteor Meteor London
+          div.meteor.london Meteor London
 
       section.emphatic-text(data-bespoke-backdrop='meteorday')
-        h1 Meteor Day
+        h1 Welcome
 
       section
-        h2 <a href="http://meteorday.meteor.com/">There's a lot of us</a>
-      
-      section
-        h2 How did we get here?
-      
-      section
-        h2 Then...
-        
-      section
-        h2 In a public house
-        
-      section
-        h2 on a rainy February
-        
-      section
-        h2 (2013!)        
-        
-      section(data-bespoke-backdrop='meteor-london-then-1')
-      
-      section(data-bespoke-backdrop='meteor-london-then-2')
-      
-      section(data-bespoke-backdrop='meteor-london-then-3')
-      
-      section(data-bespoke-backdrop='meteor-london-then-4')
-      
-      section
-        h1 NOW
-        
-      section(data-bespoke-backdrop='meteor-london-now-1')
-      
-      section
-        h1 Meteor 1.0
-      
-      section(data-bespoke-backdrop='meteor-london-now-2')
-      
-      section
-        h2 What is Meteor?
+        h2 Talks
+        h3 Build a thing, learn a thing, show a thing
 
       section
-        h1 Full stack framework        
+        h2 @peterellisjones
+        h3 Testing with TinyTest: everything is a package
+        h2 @alanshaw
+        h3 Meat Fighter 2 Turbo
 
       section
-        h1 JS everywhere
-        
-      section
-        h2 &
-        
-      section
-        h1 Transparent state syncing
-        
-      section
-        h2 server-side made simple
-        
-      section
-        h2 Means...
-        
-      section.emphatic-text(data-bespoke-backdrop='meteor-london-now-3')
-        h2 We can all build apps 
-      
-      section
-        h1 Real time apps
-        
-      section
-        h1 Data driven apps
-      
-      section
-        h1 Responsive apps
-        
-      section
-        h1 Mobile apps
-      
-      section
-        h1 Production apps
-      
-      section(data-bespoke-backdrop='meteor-london-now-4')        
-      
-      section
-        h1 Epic community
-        
-      section
-        h2 there's a lot of us        
-        
-      section
-        h2 <a href="http://meteorday.meteor.com/">meetup.com/Meteor-London/</a>
-        
-      section
-        h2 Everyone has 
-        h2 >=1 
-        h2 talk in them  
-      
-      section
-        h2 <a href="http://meteorday.meteor.com/">tell a friend</a>      
+        h2 @richsilv
+        h3 Publishing and modifying Meteor packages
+        h2 @bmordan
+        h3 Flickynotes
 
       section
-        h1 DEMOS!
+        h2 Lightning Talks
+        h3 5 minutes of fame
+
+      section
+        h2 @monbro
+        h3 Speaking siri with agenda
+        h2 @juditgreskovits
+        h3 Portfolio site
+
+      section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
+        h1 and
+
+      section
+        h2(style='margin-bottom:1em') BURRITOS from Poncho8
+        img(src='images/burrito.png')
+
+      section.emphatic-text(data-bespoke-backdrop='meteor-shower')
+        h1 Sponsored by
+
+      section
+        header.logo
+          div.meteor Meteor
+
+      section.emphatic-text(data-bespoke-backdrop='starfield')
+        h1 Hosted by
+
+      section
+        img.logo.square(src='images/logo-makers-academy.png')
+
+      section
+        h1 Show time!
         
 script(src='build/build.js')
