Add January meetup talks

--- a/src/index.jade
+++ b/src/index.jade
@@ -23,26 +23,28 @@ html
         h3 Build a thing, learn a thing, show a thing
 
       section
-        h2 @peterellisjones
-        h3 Testing with TinyTest: everything is a package
-        h2 @alanshaw
-        h3 Meat Fighter 2 Turbo
+        h2 Mark Woodbridge
+        h3 Meteor at Chaser
 
       section
-        h2 @richsilv
-        h3 Publishing and modifying Meteor packages
-        h2 @bmordan
-        h3 Flickynotes
+        h2 Liam Wooding
+        h3 Peer-to-peer multiplayer in Meteor
 
       section
-        h2 Lightning Talks
-        h3 5 minutes of fame
+        h2 Michael Karliner
+        h3 The Internet of Meteor Things
 
       section
-        h2 @monbro
-        h3 Speaking siri with agenda
-        h2 @juditgreskovits
-        h3 Portfolio site
+        h1
+          | Lightning Talks
+          br
+          small (5 minutes of fame)
+
+      section
+        h2 Richard Silverton
+        h3 Meteor PageSlider
+        h2 Bernard Mordan
+        h3 Famo.us in your Meteor Project 3 ways
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
