--- a/src/index.jade
+++ b/src/index.jade
@@ -23,16 +23,12 @@ html
         h3 Build a thing, learn a thing, show a thing
 
       section
-        h2 Mark Woodbridge
-        h3 Meteor at Chaser
+        h2 Richard Silverton
+        h3 Meteor Newsround
 
       section
-        h2 Liam Wooding
-        h3 Peer-to-peer multiplayer in Meteor
-
-      section
-        h2 Michael Karliner
-        h3 The Internet of Meteor Things
+        h2 Oli Evans
+        h3 A bluffers guide to cooperative-multitasking
 
       section
         h1
@@ -41,10 +37,14 @@ html
           small (5 minutes of fame)
 
       section
-        h2 Richard Silverton
-        h3 Meteor PageSlider
+        h2 Matthew Linares
+        h3 Porting a News site to Meteor
+
+        h2 Michael Klein
+        h3 Introduction to an enhanced modular webapp
+
         h2 Bernard Mordan
-        h3 Famo.us in your Meteor Project 3 ways
+        h3 Getting physical with famo.us and Meteor
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
