Update slides for May 2015 meetup

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -34,6 +34,9 @@
 .logo .meteor.london
   background-image: url(../images/meteor-london-logo-on-dark.svg);
 
+.black-background
+  background: #000;
+
 .meteorday
   background: url(http://meteorday.com/img/intro-bg.jpg) no-repeat scroll 0 0
   background-size: cover
