--- a/src/index.jade
+++ b/src/index.jade
@@ -27,8 +27,12 @@ html
         h3 Meteor Newsround
 
       section
+        h2 Alan Shaw
+        h3 Swing-o-Meteor
+
+      section
         h2 Oli Evans
-        h3 A bluffers guide to cooperative-multitasking
+        h3 A bluffers guide to cooperative-multitasking - part II
 
       section
         h1
@@ -37,14 +41,14 @@ html
           small (5 minutes of fame)
 
       section
-        h2 Matthew Linares
-        h3 Porting a News site to Meteor
+        h2 Jimmy Tidey
+        h3 LocalNets: local community asset mapping
 
-        h2 Michael Klein
-        h3 Introduction to an enhanced modular webapp
+        h2 Paul Young
+        h3 Non-dev Meteor dev
 
-        h2 Bernard Mordan
-        h3 Getting physical with famo.us and Meteor
+        h2 YOU!
+        h3 Look at the shiny thing I builded!
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
@@ -63,8 +67,8 @@ html
       section.emphatic-text(data-bespoke-backdrop='starfield')
         h1 Hosted by
 
-      section
-        img.logo.square(src='images/logo-makers-academy.png')
+      section.emphatic-text(data-bespoke-backdrop='black-background')
+        img.logo.square(src='images/logo-rml.jpg')
 
       section
         h1 Show time!
