--- a/src/index.jade
+++ b/src/index.jade
@@ -19,6 +19,9 @@ html
         h1 Welcome
 
       section
+        h2 Celebrity Special!
+
+      section
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
@@ -27,12 +30,12 @@ html
         h3 Meteor Newsround
 
       section
-        h2 Alan Shaw
-        h3 Swing-o-Meteor
+        h2 Michael Karliner
+        h3 ThingStudio
 
       section
-        h2 Oli Evans
-        h3 A bluffers guide to cooperative-multitasking - part II
+        h2 Gadi Cohen
+        h3 Meteor Famous Views
 
       section
         h1
@@ -41,12 +44,16 @@ html
           small (5 minutes of fame)
 
       section
-        h2 Jimmy Tidey
-        h3 LocalNets: local community asset mapping
+        h2 Michal Zacher
+        h3 Project Management Platform
 
-        h2 Paul Young
-        h3 Non-dev Meteor dev
+        h2 Justin Windle &amp; Matthew Wagerfield
+        h3 Multiplayer Meteor game
 
+        h2 Bernard Mordan
+        h3 Static Clock
+
+      section
         h2 YOU!
         h3 Look at the shiny thing I builded!
 
@@ -68,7 +75,7 @@ html
         h1 Hosted by
 
       section.emphatic-text(data-bespoke-backdrop='black-background')
-        img.logo.square(src='images/logo-rml.jpg')
+        img.logo.square(src='images/logo-makers-academy.png')
 
       section
         h1 Show time!
