--- a/src/index.jade
+++ b/src/index.jade
@@ -19,23 +19,16 @@ html
         h1 Welcome
 
       section
-        h2 Celebrity Special!
-
-      section
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
       section
-        h2 Richard Silverton
+        h2 Oli Evans
         h3 Meteor Newsround
 
       section
-        h2 Michael Karliner
-        h3 ThingStudio
-
-      section
-        h2 Gadi Cohen
-        h3 Meteor Famous Views
+        h2 Dave Nyss
+        h3 POTM - Package of the Month
 
       section
         h1
@@ -44,11 +37,14 @@ html
           small (5 minutes of fame)
 
       section
-        h2 Michal Zacher
-        h3 Project Management Platform
+        h2 Mark Woodbridge
+        h3 Meteor with Electron
 
-        h2 Justin Windle &amp; Matthew Wagerfield
-        h3 Multiplayer Meteor game
+        h2 Fabien Behier
+        h3 attraction.meteor.com
+
+        h2 Hanna Celina
+        h3 Learning Circle
 
         h2 Bernard Mordan
         h3 Static Clock
@@ -79,5 +75,5 @@ html
 
       section
         h1 Show time!
-        
+
 script(src='build/build.js')
