--- a/src/index.jade
+++ b/src/index.jade
@@ -22,36 +22,33 @@ html
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
-      section
-        h2 Oli Evans
-        h3 Meteor Newsround
+      section(data-bespoke-backdrop='ron')
+        h2 Richard Silverton
+        h3 Meteor News
 
       section
-        h2 Dave Nyss
-        h3 POTM - Package of the Month
+        h2 Bruno Vinel
+        h3 agily.io
+
+      section
+        h2 Bernat Orell
+        h3 Meteor + Flux
 
       section
         h1
           | Lightning Talks
           br
           small (5 minutes of fame)
-
+      
       section
-        h2 Mark Woodbridge
-        h3 Meteor with Electron
-
-        h2 Fabien Behier
-        h3 attraction.meteor.com
-
-        h2 Hanna Celina
-        h3 Learning Circle
-
-        h2 Bernard Mordan
-        h3 Static Clock
+        h3 Edward Hughes
+        h4 Academic collaboration and conference
+        h3 Oli Evans
+        h4 Add SASS &amp; Bootstrap4 the npm way
 
       section
         h2 YOU!
-        h3 Look at the shiny thing I builded!
+        h3 Behold you wonder!
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
@@ -66,6 +63,11 @@ html
       section
         header.logo
           div.meteor Meteor
+
+      section
+        header.emphatic-text(data-bespoke-backdrop='black-background')
+          img.logo(src='images/TABLEFLIP.svg' style='margin-bottom:20px;')
+          h2 TABLEFLIP.io
 
       section.emphatic-text(data-bespoke-backdrop='starfield')
         h1 Hosted by
