--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -27,7 +27,7 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-  
+
 .logo.square
   height:500px;
 
@@ -40,7 +40,7 @@
 .meteorday
   background: url(http://meteorday.com/img/intro-bg.jpg) no-repeat scroll 0 0
   background-size: cover
-  
+
 .nordic-meteor
   background: url(../images/bg-nordic-meteor.jpg) no-repeat scroll 0 0
   background-size: cover
@@ -48,7 +48,7 @@
 .meteor-shower
   background: url(../images/bg-meteor-shower.jpg) no-repeat scroll 0 0
   background-size: cover
-  
+
 .starfield
   background: url(../images/bg-starfield.jpg) no-repeat scroll 0 0
   background-size: cover
@@ -89,4 +89,6 @@
   background: url(http://photos4.meetupstatic.com/photos/event/4/0/9/e/highres_374896542.jpeg) no-repeat scroll 50%
   background-size: auto 120%;
 
-
+.ron
+  background: url(../images/ron-burgundy-1024.jpg) no-repeat scroll 50%
+  background-size: 100% auto;
