--- a/src/index.jade
+++ b/src/index.jade
@@ -27,28 +27,22 @@ html
         h3 Meteor News
 
       section
-        h2 Bruno Vinel
-        h3 agily.io
+        h2 Jimmy Tidey
+        h3 Shakespeare in Shoreditch
 
       section
-        h2 Bernat Orell
-        h3 Meteor + Flux
+        h2 Matthew Linares
+        h3 streetscenes.org.uk
 
       section
         h1
           | Lightning Talks
           br
           small (5 minutes of fame)
-      
-      section
-        h3 Edward Hughes
-        h4 Academic collaboration and conference
-        h3 Oli Evans
-        h4 Add SASS &amp; Bootstrap4 the npm way
 
       section
         h2 YOU!
-        h3 Behold you wonder!
+        h3 Come closer my pretty
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
