--- a/src/index.jade
+++ b/src/index.jade
@@ -22,17 +22,19 @@ html
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
-      section(data-bespoke-backdrop='ron')
-        h2 Richard Silverton
+      section
+        h2 Oli Evans
         h3 Meteor News
 
       section
-        h2 Jimmy Tidey
-        h3 Shakespeare in Shoreditch
+        h2 Adam Morse
+        h3 Tachyons CSS toolkit
+        h4 http://tachyons.io
 
       section
-        h2 Matthew Linares
-        h3 streetscenes.org.uk
+        h2 Richard Silverton
+        h3 Apollo - first impressions
+        h4 http://apollostack.com
 
       section
         h1
@@ -42,7 +44,7 @@ html
 
       section
         h2 YOU!
-        h3 Come closer my pretty
+        h3 Check out my house of cards!
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
