--- a/src/index.jade
+++ b/src/index.jade
@@ -22,19 +22,18 @@ html
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
-      section
+      section(data-bespoke-backdrop='oli-news')
         h2 Oli Evans
         h3 Meteor News
 
       section
-        h2 Adam Morse
-        h3 Tachyons CSS toolkit
-        h4 http://tachyons.io
+        h2 Tony Russo
+        h3 Use Kanban
+        h4 https://usekanban.com
 
       section
         h2 Richard Silverton
-        h3 Apollo - first impressions
-        h4 http://apollostack.com
+        h3 Data Aggregation Queries
 
       section
         h1
@@ -44,7 +43,7 @@ html
 
       section
         h2 YOU!
-        h3 Check out my house of cards!
+        h3 I made a thinger!
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
