--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -41,6 +41,10 @@
   background: url(http://meteorday.com/img/intro-bg.jpg) no-repeat scroll 0 0
   background-size: cover
 
+.oli-news
+  background: url(../images/oli-news.jpg) no-repeat scroll 0 0
+  background-size: cover
+
 .nordic-meteor
   background: url(../images/bg-nordic-meteor.jpg) no-repeat scroll 0 0
   background-size: cover
