--- a/src/index.jade
+++ b/src/index.jade
@@ -22,18 +22,14 @@ html
         h2 Talks
         h3 Build a thing, learn a thing, show a thing
 
-      section(data-bespoke-backdrop='oli-news')
-        h2 Oli Evans
+      section(data-bespoke-backdrop='ron')
+        h2 Richard Silverton
         h3 Meteor News
 
       section
-        h2 Tony Russo
-        h3 Use Kanban
-        h4 https://usekanban.com
-
-      section
-        h2 Richard Silverton
-        h3 Data Aggregation Queries
+        h2 Babak Fakhamzadeh
+        h3 Inside Kompl
+        h4 komplapp.com
 
       section
         h1
@@ -43,7 +39,7 @@ html
 
       section
         h2 YOU!
-        h3 I made a thinger!
+        h3 I build it in Meteorz!
 
       section.emphatic-text(data-bespoke-backdrop='nordic-meteor')
         h1 and
